feat:seal path for tag
Can get a seal by tag using /seal/{tag}

Also, changed route from 'seals' to 'seal' as we're primarilly working
with single seals
