# src/seals/sealController.ts
@@ -2,16 +2,16 @@ import { Controller, Get, Path, Query, Route } from "tsoa";
 import { Seal } from "./sealModel";
 import { SealService } from "./sealService";
 
-@Route("seals")
+@Route("seal")
 export class SealController extends Controller {
   /**
    * Get a Specific Seal
-   * @param sealId Id of a seal
+   * @param id Id of a seal
    * @returns {Seal} Data for a Seal
    */
-  @Get("{sealId}")
-  public async getSeal(@Path() sealId?: number): Promise<Seal> {
-    return new SealService().get(sealId);
+  @Get("/id/{id}")
+  public async getSeal(@Path() id?: number): Promise<Seal> {
+    return new SealService().get(id);
   }
 
   /**
@@ -22,9 +22,16 @@ export class SealController extends Controller {
    */
   @Get("/")
   public async getRandomSeal(@Query() slug?: string, @Query() tags?: string[]): Promise<Seal> {
-    if (!slug && !tags) {
-      return new SealService().getRandom();
-    }
-    return new SealService().get(undefined, slug, tags);
+    return new SealService().getRandom();
   }
+
+  /**
+   * Get a Seal with tag
+   * @param tag tag of a seal
+   * @returns {Seal} Data for a Seal
+   */
+   @Get("/{tag}")
+   public async getSealByTag(@Path() tag: string): Promise<Seal> {
+     return new SealService().getByTag(tag);
+   }
 }
